--- a/pages/sinalizar3.html
+++ b/pages/sinalizar3.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="../css/desligar.css">
   <link rel="shortcut icon" href="../image/logo_navbar.jpeg" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sign-in/">
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
   <title>DPL COSTRUÇÕES</title>
 </head>
 
@@ -39,34 +38,53 @@
           <div class="connecting-line"></div>
         </div>
         <div class="d-flex">
-          <div class="stepTab ">
+          <div class="stepTab">
             <div class="square-tab">
-              <a class="text-white"><div>1</div></a>
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam2">APR</div>
+              </a>
             </div>
           </div>
           <div class="stepTab">
             <div class="square-tab">
-              <a class="text-white"><div>2</div></a>
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam">1</div>
+              </a>
+            </div>
+          </div>
+          <div class="stepTab">
+            <div class="square-tab">
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam">2</div>
+              </a>
             </div>
           </div>
           <div class="stepTab">
             <div class="square-tabb">
-              <a class="text-white"><div>3</div></a>
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam">3</div>
+              </a>
             </div>
           </div>
           <div class="stepTab">
             <div class="square-tab">
-              <a class="text-white"><div>4</div></a>
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam">4</div>
+              </a>
             </div>
           </div>
           <div class="stepTab">
             <div class="square-tab">
-              <a class="text-white"><div>5</div></a>
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam">5</div>
+              </a>
             </div>
           </div>
           <div class="stepTab">
             <div class="square-tab">
-              <a class="text-white"><div>6</div></a>
+              <a class="text-white text-decoration-none">
+                <div class="fw-bolder fonte_tam">6</div>
+              </a>
             </div>
           </div>
         </div>
@@ -77,12 +95,12 @@
     <!-- ---------------------------------------REGRAS -->
 
     <div class="container text-center mb-4 fonte col-11 mt-4">
-      <div class="my-auto"><img src="/pages/imagens/Sinalizar3.jpg" width="80%">
+      <div class="my-auto"><img src="/pages/imagens/Sinalizar3.jpg" width="80%" class="img-thumbnail">
       </div>
       <h1 class="text_regras mb-4">Regra 3</h1>
-      <h4 class="mb-4 text_destaque2">Sinalizar:</h4>
+      <h4 class="mb-4 text_destaque2">SINALIZAR:</h4>
       <p class="text_destaque">Sinalizar (placa "Não opere esse equipamento") os equipamentos de seccionamento de forma a impedir uma operação não autorizada.</p>
-      <div class="form-switch bg-secondary rounded-3 text-white py-2 mt-4">
+      <div class="form-switch fundo_verde rounded-3 text-white py-2 mt-4">
         <input class="form-check-input p-2 me-3 confirm" type="checkbox" id="sinalizar3">
         <label class="form-check-label fw-semibold" for="sinalizar3"><small>Confirmo que li e estou
             ciente.</small></label>
@@ -92,14 +110,24 @@
         <small class="">Insira o registro fotográfico abaixo.</small>
       </div>
 
-      <button class="btn fundo_verde text-white mb-2" id="captureButton">Abrir Câmera
-        <path
-          d="M149.1 64.8L138.7 96H64C28.7 96 0 124.7 0 160V416c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V160c0-35.3-28.7-64-64-64H373.3L362.9 64.8C356.4 45.2 338.1 32 317.4 32H194.6c-20.7 0-39 13.2-45.5 32.8zM256 192a96 96 0 1 1 0 192 96 96 0 1 1 0-192z" />
-        </svg>
-      </button>
+      <div class="mb-3">
+        <label for="btnCamera" class="btn fundo_verde text-white mb-2">
+          Abrir Câmera &nbsp;
+          <i class="fa-solid fa-camera"></i>
+        </label>
+
+        <input class="form-control d-none sinalizar" type="file" id="btnCamera" accept="image/*">
+      </div>
+
+      <!-- loader -->
+      <figure class="d-flex justify-content-center d-none" id="loader">
+          <img src="../image/loader.gif" alt="" class="img-fluid" style="width:100px">
+      </figure>
+      
       <div class="d-flex flex-wrap" id="imageContainer">
         <img id="photo" src="" alt="Sua foto será exibida aqui." class="d-none img-thumbnail">
       </div>
+      
     </div>
 
     <div class="text-center d-flex justify-content-around">
@@ -109,18 +137,16 @@
 
   </main>
 
-  <footer class="fundo_verde p-2">
+  <footer class="fundo_laranja p-2 mt-">
     <h6 class="text-center text-white">DPL CONSTRUÇÕES LTDA</h6>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/camera.js"></script>
+
   <script type="module" src="../js/config-firebase.js"></script>
-  <script type="module" src="../js/app.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script type="module" src="../js/storage.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  
 </body>
